Historial y Platillos finalizado

--- a/Proyecto/app/src/main/res/layout/fragment_historial.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_historial.xml
@@ -20,7 +20,7 @@
         tools:src="@drawable/small" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnPay"
         style="@style/BlueButton"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -34,13 +34,16 @@
 
     <TextView
         android:id="@+id/txtPrecioTotal"
-        android:layout_width="82dp"
+        android:layout_width="150dp"
         android:layout_height="41dp"
         android:layout_marginTop="614dp"
-        android:layout_marginEnd="132dp"
+        android:layout_marginEnd="64dp"
         android:layout_weight="1"
         android:fontFamily="@font/poppins_bold"
         android:textColor="@color/blueMain"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,18 +65,20 @@
         android:layout_width="375dp"
         android:layout_height="530dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="18dp"
         android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView11">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginBottom="5dp"
-            android:padding="10dp"
             android:background="@drawable/layout_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <ImageView
                 android:layout_width="100dp"
@@ -91,19 +96,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="#fff"
-                    android:textSize="16dp"
+                    android:gravity="center"
+                    android:text="Pozole"
                     android:textAlignment="center"
-                    android:text="Pozole" />
+                    android:textColor="#fff"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="TextView"
+                    android:gravity="center"
+                    android:text="104.39"
                     android:textAlignment="center"
                     android:textColor="@color/orangeMain"
-                    android:textSize="16dp"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -118,9 +125,11 @@
                     android:id="@+id/txtCantidadPozole"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="16dp"
-                    android:textAlignment="center"/>
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </LinearLayout>
@@ -129,9 +138,9 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginBottom="5dp"
-            android:padding="10dp"
             android:background="@drawable/layout_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <ImageView
                 android:layout_width="100dp"
@@ -149,19 +158,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="#fff"
-                    android:textSize="16dp"
+                    android:gravity="center"
+                    android:text="Tacos"
                     android:textAlignment="center"
-                    android:text="Tacos" />
+                    android:textColor="#fff"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="16.82"
                     android:textAlignment="center"
-                    android:textSize="16dp"
                     android:textColor="@color/orangeMain"
-                    android:text="TextView"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -176,9 +187,11 @@
                     android:id="@+id/txtCantidadTacos"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textStyle="bold"
                     android:textColor="#fff"
-                    android:textSize="16dp"
-                    android:textAlignment="center"/>
+                    android:textSize="24dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -187,9 +200,9 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginBottom="5dp"
-            android:padding="10dp"
             android:background="@drawable/layout_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <ImageView
                 android:layout_width="100dp"
@@ -207,19 +220,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="#fff"
-                    android:textSize="16dp"
+                    android:gravity="center"
+                    android:text="Tortas"
                     android:textAlignment="center"
-                    android:text="Tortas" />
+                    android:textColor="#fff"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="75.98"
                     android:textAlignment="center"
-                    android:textSize="16dp"
                     android:textColor="@color/orangeMain"
-                    android:text="TextView"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -234,9 +249,11 @@
                     android:id="@+id/txtCantidadTortas"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textStyle="bold"
                     android:textColor="#fff"
-                    android:textSize="16dp"
-                    android:textAlignment="center"/>
+                    android:textSize="24dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -245,9 +262,9 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginBottom="5dp"
-            android:padding="10dp"
             android:background="@drawable/layout_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <ImageView
                 android:layout_width="100dp"
@@ -265,19 +282,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="#fff"
-                    android:textSize="16dp"
+                    android:gravity="center"
+                    android:text="Flautas"
                     android:textAlignment="center"
-                    android:text="Flautas" />
+                    android:textColor="#fff"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="15.07"
                     android:textAlignment="center"
-                    android:textSize="16dp"
                     android:textColor="@color/orangeMain"
-                    android:text="TextView"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -292,9 +311,11 @@
                     android:id="@+id/txtCantidadFlautas"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="16dp"
-                    android:textAlignment="center"/>
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="24dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -304,9 +325,9 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginBottom="5dp"
-            android:padding="10dp"
             android:background="@drawable/layout_bg"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <ImageView
                 android:layout_width="100dp"
@@ -324,19 +345,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textColor="#fff"
-                    android:textSize="16dp"
+                    android:gravity="center"
+                    android:text="Enchiladas"
                     android:textAlignment="center"
-                    android:text="Enchiladas" />
+                    android:textColor="#fff"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="52.49"
                     android:textAlignment="center"
-                    android:textSize="16dp"
                     android:textColor="@color/orangeMain"
-                    android:text="TextView"
+                    android:textSize="18dp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -351,9 +374,11 @@
                     android:id="@+id/txtCantidadEnchiladas"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:textAlignment="center"
                     android:textColor="#fff"
-                    android:textSize="16dp"
-                    android:textAlignment="center"/>
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="24dp" />
             </LinearLayout>
 
         </LinearLayout>
