Se agrego el ultimo Fragment
Ya ha quedado el ultimo Fragment, solo falta crear la funcion para que lo que se llene en Envios se cree un archivo y lo muestre en el cuadro.

--- a/Proyecto/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Proyecto/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,5 +27,11 @@
             android:id="@+id/envioFragment"
             android:title="Send"
             android:icon="@drawable/envio_icon"/>
+
+        <item
+            android:id="@+id/fileFragment"
+            android:title="Historias Envios"
+            android:icon="@drawable/historial_icon"/>
+
     </group>
 </menu>
