--- a/Proyecto/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Proyecto/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,4 +37,9 @@
         android:name="com.example.proyecto.ui.main.SalidaFragment"
         android:label="fragment_salida"
         tools:layout="@layout/fragment_salida" />
+    <fragment
+        android:id="@+id/fileFragment"
+        android:name="com.example.proyecto.ui.file.FileFragment"
+        android:label="fragment_file"
+        tools:layout="@layout/fragment_file" />
 </navigation>
