--- a/Proyecto/app/src/main/res/layout/fragment_file.xml
+++ b/Proyecto/app/src/main/res/layout/fragment_file.xml
@@ -30,8 +30,9 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:padding="15dp"
         android:textColor="#fff"
-        android:textSize="20dp"
+        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView13" />
