--- a/Proyecto/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Proyecto/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,6 +40,6 @@
     <fragment
         android:id="@+id/fileFragment"
         android:name="com.example.proyecto.ui.file.FileFragment"
-        android:label="fragment_file"
+        android:label="Historial envios"
         tools:layout="@layout/fragment_file" />
 </navigation>
